{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 150,
  "lineage": "e9450722-fe20-f3d3-c14a-19a19ee1773b",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ec541874-4359-475a-9d16-8dadc452eef5/resourceGroups/AVL-Rares-Testing/providers/Microsoft.Network/networkInterfaces/nic-vm1",
            "internal_domain_name_suffix": "hv2vq3egnhhu5bwy4jv2q0kwxb.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ec541874-4359-475a-9d16-8dadc452eef5/resourceGroups/AVL-Rares-Testing/providers/Microsoft.Network/publicIPAddresses/1stPublicIP",
                "subnet_id": "/subscriptions/ec541874-4359-475a-9d16-8dadc452eef5/resourceGroups/AVL-Rares-Testing/providers/Microsoft.Network/virtualNetworks/vnet-we-01/subnets/subnet-01"
              }
            ],
            "location": "westeurope",
            "mac_address": "60-45-BD-8E-D1-3D",
            "name": "nic-vm1",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "AVL-Rares-Testing",
            "virtual_machine_id": "/subscriptions/ec541874-4359-475a-9d16-8dadc452eef5/resourceGroups/AVL-Rares-Testing/providers/Microsoft.Compute/virtualMachines/master-node"
          },
          "dependencies": [
            "azurerm_public_ip.publicIP1",
            "azurerm_subnet.subnet1",
            "azurerm_virtual_network.vnet",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ec541874-4359-475a-9d16-8dadc452eef5/resourceGroups/AVL-Rares-Testing/providers/Microsoft.Network/networkInterfaces/nic-vm2",
            "internal_domain_name_suffix": "hv2vq3egnhhu5bwy4jv2q0kwxb.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ec541874-4359-475a-9d16-8dadc452eef5/resourceGroups/AVL-Rares-Testing/providers/Microsoft.Network/publicIPAddresses/2ndPublicIP",
                "subnet_id": "/subscriptions/ec541874-4359-475a-9d16-8dadc452eef5/resourceGroups/AVL-Rares-Testing/providers/Microsoft.Network/virtualNetworks/vnet-we-01/subnets/subnet-02"
              }
            ],
            "location": "westeurope",
            "mac_address": "60-45-BD-8B-9C-6C",
            "name": "nic-vm2",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "AVL-Rares-Testing",
            "virtual_machine_id": "/subscriptions/ec541874-4359-475a-9d16-8dadc452eef5/resourceGroups/AVL-Rares-Testing/providers/Microsoft.Compute/virtualMachines/worker-node1"
          },
          "dependencies": [
            "azurerm_public_ip.publicIP2",
            "azurerm_subnet.subnet2",
            "azurerm_virtual_network.vnet",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ec541874-4359-475a-9d16-8dadc452eef5/resourceGroups/AVL-Rares-Testing/providers/Microsoft.Network/networkInterfaces/nic-vm3",
            "internal_domain_name_suffix": "hv2vq3egnhhu5bwy4jv2q0kwxb.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.3.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ec541874-4359-475a-9d16-8dadc452eef5/resourceGroups/AVL-Rares-Testing/providers/Microsoft.Network/publicIPAddresses/3rdPublicIP",
                "subnet_id": "/subscriptions/ec541874-4359-475a-9d16-8dadc452eef5/resourceGroups/AVL-Rares-Testing/providers/Microsoft.Network/virtualNetworks/vnet-we-01/subnets/subnet-03"
              }
            ],
            "location": "westeurope",
            "mac_address": "60-45-BD-9F-12-2C",
            "name": "nic-vm3",
            "private_ip_address": "10.0.3.4",
            "private_ip_addresses": [
              "10.0.3.4"
            ],
            "resource_group_name": "AVL-Rares-Testing",
            "virtual_machine_id": "/subscriptions/ec541874-4359-475a-9d16-8dadc452eef5/resourceGroups/AVL-Rares-Testing/providers/Microsoft.Compute/virtualMachines/worker-node2"
          },
          "dependencies": [
            "azurerm_public_ip.publicIP3",
            "azurerm_subnet.subnet3",
            "azurerm_virtual_network.vnet",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ec541874-4359-475a-9d16-8dadc452eef5/resourceGroups/AVL-Rares-Testing/providers/Microsoft.Network/networkInterfaces/nic-vm1|/subscriptions/ec541874-4359-475a-9d16-8dadc452eef5/resourceGroups/AVL-Rares-Testing/providers/Microsoft.Network/networkSecurityGroups/master-nsg",
            "network_interface_id": "/subscriptions/ec541874-4359-475a-9d16-8dadc452eef5/resourceGroups/AVL-Rares-Testing/providers/Microsoft.Network/networkInterfaces/nic-vm1",
            "network_security_group_id": "/subscriptions/ec541874-4359-475a-9d16-8dadc452eef5/resourceGroups/AVL-Rares-Testing/providers/Microsoft.Network/networkSecurityGroups/master-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.nic1",
            "azurerm_network_security_group.nsg_master",
            "azurerm_public_ip.publicIP1",
            "azurerm_subnet.subnet1",
            "azurerm_virtual_network.vnet",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ec541874-4359-475a-9d16-8dadc452eef5/resourceGroups/AVL-Rares-Testing/providers/Microsoft.Network/networkInterfaces/nic-vm2|/subscriptions/ec541874-4359-475a-9d16-8dadc452eef5/resourceGroups/AVL-Rares-Testing/providers/Microsoft.Network/networkSecurityGroups/workers-nsg",
            "network_interface_id": "/subscriptions/ec541874-4359-475a-9d16-8dadc452eef5/resourceGroups/AVL-Rares-Testing/providers/Microsoft.Network/networkInterfaces/nic-vm2",
            "network_security_group_id": "/subscriptions/ec541874-4359-475a-9d16-8dadc452eef5/resourceGroups/AVL-Rares-Testing/providers/Microsoft.Network/networkSecurityGroups/workers-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.nic2",
            "azurerm_network_security_group.nsg_workers",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "association3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ec541874-4359-475a-9d16-8dadc452eef5/resourceGroups/AVL-Rares-Testing/providers/Microsoft.Network/networkInterfaces/nic-vm3|/subscriptions/ec541874-4359-475a-9d16-8dadc452eef5/resourceGroups/AVL-Rares-Testing/providers/Microsoft.Network/networkSecurityGroups/workers-nsg",
            "network_interface_id": "/subscriptions/ec541874-4359-475a-9d16-8dadc452eef5/resourceGroups/AVL-Rares-Testing/providers/Microsoft.Network/networkInterfaces/nic-vm3",
            "network_security_group_id": "/subscriptions/ec541874-4359-475a-9d16-8dadc452eef5/resourceGroups/AVL-Rares-Testing/providers/Microsoft.Network/networkSecurityGroups/workers-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.nic3",
            "azurerm_network_security_group.nsg_workers",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ec541874-4359-475a-9d16-8dadc452eef5/resourceGroups/AVL-Rares-Testing/providers/Microsoft.Network/networkSecurityGroups/master-nsg",
            "location": "westeurope",
            "name": "master-nsg",
            "resource_group_name": "AVL-Rares-Testing",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "10250-10252",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "api-scheduler-controller",
                "priority": 150,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.0.0/16",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow_ssh",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "2379-2380",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "etcd-server-client-api",
                "priority": 140,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.0.0/16",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow_https",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "6443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "k8s-api-server",
                "priority": 130,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow_http",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ec541874-4359-475a-9d16-8dadc452eef5/resourceGroups/AVL-Rares-Testing/providers/Microsoft.Network/networkSecurityGroups/workers-nsg",
            "location": "westeurope",
            "name": "workers-nsg",
            "resource_group_name": "AVL-Rares-Testing",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "10250",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "kubelet-API",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.0.0/16",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow_ssh",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "30000-32767",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "NodePortServices",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "publicIP1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/ec541874-4359-475a-9d16-8dadc452eef5/resourceGroups/AVL-Rares-Testing/providers/Microsoft.Network/publicIPAddresses/1stPublicIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.234.155.245",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "1stPublicIP",
            "resource_group_name": "AVL-Rares-Testing",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "publicIP2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/ec541874-4359-475a-9d16-8dadc452eef5/resourceGroups/AVL-Rares-Testing/providers/Microsoft.Network/publicIPAddresses/2ndPublicIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.234.155.215",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "2ndPublicIP",
            "resource_group_name": "AVL-Rares-Testing",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "publicIP3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/ec541874-4359-475a-9d16-8dadc452eef5/resourceGroups/AVL-Rares-Testing/providers/Microsoft.Network/publicIPAddresses/3rdPublicIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.234.155.229",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "3rdPublicIP",
            "resource_group_name": "AVL-Rares-Testing",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ec541874-4359-475a-9d16-8dadc452eef5/resourceGroups/AVL-Rares-Testing/providers/Microsoft.Network/virtualNetworks/vnet-we-01/subnets/subnet-01",
            "name": "subnet-01",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "AVL-Rares-Testing",
            "virtual_network_name": "vnet-we-01"
          },
          "dependencies": [
            "azurerm_virtual_network.vnet",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ec541874-4359-475a-9d16-8dadc452eef5/resourceGroups/AVL-Rares-Testing/providers/Microsoft.Network/virtualNetworks/vnet-we-01/subnets/subnet-02",
            "name": "subnet-02",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "AVL-Rares-Testing",
            "virtual_network_name": "vnet-we-01"
          },
          "dependencies": [
            "azurerm_virtual_network.vnet",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ec541874-4359-475a-9d16-8dadc452eef5/resourceGroups/AVL-Rares-Testing/providers/Microsoft.Network/virtualNetworks/vnet-we-01/subnets/subnet-03",
            "name": "subnet-03",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "AVL-Rares-Testing",
            "virtual_network_name": "vnet-we-01"
          },
          "dependencies": [
            "azurerm_virtual_network.vnet",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "7458793d-6986-4fcf-86d8-f26bc86956b9",
            "id": "/subscriptions/ec541874-4359-475a-9d16-8dadc452eef5/resourceGroups/AVL-Rares-Testing/providers/Microsoft.Network/virtualNetworks/vnet-we-01",
            "location": "westeurope",
            "name": "vnet-we-01",
            "resource_group_name": "AVL-Rares-Testing",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/ec541874-4359-475a-9d16-8dadc452eef5/resourceGroups/AVL-Rares-Testing/providers/Microsoft.Network/virtualNetworks/vnet-we-01/subnets/subnet-01",
                "name": "subnet-01"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/ec541874-4359-475a-9d16-8dadc452eef5/resourceGroups/AVL-Rares-Testing/providers/Microsoft.Network/virtualNetworks/vnet-we-01/subnets/subnet-02",
                "name": "subnet-02"
              },
              {
                "address_prefix": "10.0.3.0/24",
                "id": "/subscriptions/ec541874-4359-475a-9d16-8dadc452eef5/resourceGroups/AVL-Rares-Testing/providers/Microsoft.Network/virtualNetworks/vnet-we-01/subnets/subnet-03",
                "name": "subnet-03"
              }
            ]
          },
          "dependencies": [
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}